@@ -42,67 +42,7 @@ name|junit
 operator|.
 name|Assert
 operator|.
-name|assertArrayEquals
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|junit
-operator|.
-name|Assert
-operator|.
-name|assertEquals
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|junit
-operator|.
-name|Assert
-operator|.
-name|assertFalse
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|junit
-operator|.
-name|Assert
-operator|.
-name|assertNotNull
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|junit
-operator|.
-name|Assert
-operator|.
-name|assertThat
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|junit
-operator|.
-name|Assert
-operator|.
-name|assertTrue
+name|*
 import|;
 end_import
 
@@ -326,7 +266,39 @@ name|hadoop
 operator|.
 name|hdfs
 operator|.
+name|MiniDFSCluster
+operator|.
+name|DataNodeProperties
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
 name|TestRollingUpgrade
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|client
+operator|.
+name|BlockReportOptions
 import|;
 end_import
 
@@ -1349,6 +1321,145 @@ block|{
 name|startCluster
 argument_list|()
 expr_stmt|;
+name|rollingUpgradeAndFinalize
+argument_list|()
+expr_stmt|;
+comment|// Do it again
+name|rollingUpgradeAndFinalize
+argument_list|()
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|shutdownCluster
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+annotation|@
+name|Test
+argument_list|(
+name|timeout
+operator|=
+literal|600000
+argument_list|)
+DECL|method|testDatanodeRUwithRegularUpgrade ()
+specifier|public
+name|void
+name|testDatanodeRUwithRegularUpgrade
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+try|try
+block|{
+name|startCluster
+argument_list|()
+expr_stmt|;
+name|rollingUpgradeAndFinalize
+argument_list|()
+expr_stmt|;
+name|DataNodeProperties
+name|dn
+init|=
+name|cluster
+operator|.
+name|stopDataNode
+argument_list|(
+literal|0
+argument_list|)
+decl_stmt|;
+name|cluster
+operator|.
+name|restartNameNode
+argument_list|(
+literal|0
+argument_list|,
+literal|true
+argument_list|,
+literal|"-upgrade"
+argument_list|)
+expr_stmt|;
+name|cluster
+operator|.
+name|restartDataNode
+argument_list|(
+name|dn
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|cluster
+operator|.
+name|waitActive
+argument_list|()
+expr_stmt|;
+name|fs
+operator|=
+name|cluster
+operator|.
+name|getFileSystem
+argument_list|(
+literal|0
+argument_list|)
+expr_stmt|;
+name|Path
+name|testFile3
+init|=
+operator|new
+name|Path
+argument_list|(
+literal|"/"
+operator|+
+name|GenericTestUtils
+operator|.
+name|getMethodName
+argument_list|()
+operator|+
+literal|".03.dat"
+argument_list|)
+decl_stmt|;
+name|DFSTestUtil
+operator|.
+name|createFile
+argument_list|(
+name|fs
+argument_list|,
+name|testFile3
+argument_list|,
+name|FILE_SIZE
+argument_list|,
+name|REPL_FACTOR
+argument_list|,
+name|SEED
+argument_list|)
+expr_stmt|;
+name|cluster
+operator|.
+name|getFileSystem
+argument_list|()
+operator|.
+name|finalizeUpgrade
+argument_list|()
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|shutdownCluster
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+DECL|method|rollingUpgradeAndFinalize ()
+specifier|private
+name|void
+name|rollingUpgradeAndFinalize
+parameter_list|()
+throws|throws
+name|IOException
+throws|,
+name|Exception
+block|{
 comment|// Create files in DFS.
 name|Path
 name|testFile1
@@ -1435,6 +1546,11 @@ argument_list|,
 literal|false
 argument_list|)
 decl_stmt|;
+name|cluster
+operator|.
+name|triggerBlockReports
+argument_list|()
+expr_stmt|;
 name|deleteAndEnsureInTrash
 argument_list|(
 name|testFile2
@@ -1475,13 +1591,6 @@ name|testFile1
 argument_list|)
 operator|)
 assert|;
-block|}
-finally|finally
-block|{
-name|shutdownCluster
-argument_list|()
-expr_stmt|;
-block|}
 block|}
 annotation|@
 name|Test
