@@ -1488,10 +1488,10 @@ parameter_list|)
 block|{    }
 annotation|@
 name|Override
-DECL|method|restoreTrash (String bpid)
+DECL|method|clearTrash (String bpid)
 specifier|public
 name|void
-name|restoreTrash
+name|clearTrash
 parameter_list|(
 name|String
 name|bpid
